-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.2
-
Component/s: Drivers: Filesystems
-
Labels:None
-
Module:
-
Sprint:July 2016
While investigating CORE-11377, I ran into multiple issues related to renaming a directory, and then moving a subdirectory back to the original location.
updatedir.c which reproduces this issue, creates two directories, each with a testfile:
c:\movetest\1\
|
c:\movetest\1\test.txt
|
c:\movetest\1\u\
|
c:\movetest\1\u\test.txt
|
First it renames c:\movetest\1 into c:\movetest\2.
Next it moves c:\movetest\2\u back to c:\movetest\1.
The main problem is a data corruption after doing this. I'll add more details below.
- blocks
-
CORE-11377 Firefox auto-updater leads to FAT filesystem corruption
-
- Resolved
-