[FASTFAT] Don't allow renaming a directory if there are opened files in it. The way we do it for now isn't fully optimal and could be really improved, but that's a first step in the right direction. This should help getting rid of FAT volumes corruption. This also fixes a few winetests it seems.

CORE-11426 #comment Patch that fixes bug 3 committed in r71674

svn path=/trunk/; revision=71674